--- a/04_nn_demo.ipynb
+++ b/04_nn_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 Code Walkthrough\n",
+    "## Code Walkthrough\n",
     "\n",
     "In this notebook we will work through a code example of a simple and shallow neural net. Before doing so, we should consider the *business use-case*. Our scenario will look at house price prediction, is there a business use case here?\n",
     "\n",
